<resources>
    <string name="app_name">NiftyNotes</string>
    <string name="create_name_notes_hint">Введите название</string>
    <string name="create_name_notes_text">Введите содержание</string>
    <string name="activate_reminder">Установить напоминание</string>
    <string name="deactivate_reminder">Отменить напоминание</string>
    <string name="register_title">Зарегистрируйте нового пользователя</string>
    <string name="user_name_hint">Введите имя пользователя</string>
    <string name="user_password_hint">Введите пароль</string>
    <string name="create_user">Создать</string>
    <string name="open_user">Войти</string>
    <string name="empty_data">Недостаточно данных</string>
    <string name="login_title">Авторизуйтесь чтобы открыть заметки</string>
    <string name="create_new_user">Создать нового пользователя</string>
    <string name="all_notes">Все заметки</string>
    <string name="notes">Заметки</string>
    <string name="lists">Списки</string>
    <string name="reminders">Напоминания</string>
    <string name="basket">Корзина</string>
    <string name="favorites">Избранное</string>
    <string name="user">Пользователь</string>
    <string name="images">Картинки</string>
    <string name="search_hint">Введите название</string>
    <string name="image_setting_title">Настройки картинки</string>
    <string name="image_setting_size">Размер шрифта:</string>
    <string name="image_setting_choose_color">Цвет фона</string>
    <string name="image_setting_choose_apply">Применить</string>
</resources>
