...
        android:text="@string/create_user"
        style="@style/NoteApp.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_registration_pass" />


    <EditText
        android:id="@+id/et_registration_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:hint="@string/user_password_hint"
        app:layout_constraintBottom_toTopOf="@+id/btn_create"
        app:layout_constraintTop_toBottomOf="@+id/et_registration_name"
        tools:layout_editor_absoluteX="30dp" />


    <EditText
        android:id="@+id/et_registration_name"
        android:layout_width="match_parent"
...
